--- a/src/user/user.scss
+++ b/src/user/user.scss
@@ -114,10 +114,11 @@
 				inset 0.1em 0.1em 0.1em 0 rgba(239, 241, 241, 1);
 
 			@media screen and (max-width: $phone) {
-				max-height: 480px;
+				max-height: calc(100% - 21px);
 				display: flex;
 				flex-direction: column;
 				padding: 0;
+				overflow-y: auto;
 			}
 
 			.left {
